--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <title>
+    :)
+  </title>
 <body>
   <h1>
-    Hello World!
+    Gaming Randomness
   </h1>
+  <p>
+    <a href
 </body>
 </html>
