--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <h1>
     Gaming Randomness
   </h1>
-  <p>
+   <h3>
+      a href="index.html"><button>MAIN PAGE</button></a>
+      <a href="index2.html"><button>CARS</button></a>
+      <a href="index3.html"><button>DRAWING</button></a>
+      <a href="index4.html"><button>COLOR BLOCKS</button></a>
+      <a href="index5.html"><button>LINE GAME</button></a>
+      <a href="index6.html"><button>COW GAME</button></a>
+    </h3>
 </body>
 </html>
