--- a/index2.html
+++ b/index2.html
@@ -13,12 +13,12 @@
       <a href="index2.html">Next</a>
     </h1>
     <h3>
-      <a href="index.html"><button>CARS</button></a>
-      <a href="index2.html"><button>DRAWING</button></a>
-      <a href="index3.html"><button>COLOR BLOCKS</button></a>
-      <a href="index4.html"><button>LINE GAME</button></a>
-      <a href="index5.html"><button>COW GAME</button></a>
-      <a href="index6.html"><button>IDK BUT I DIDNT FINISH</button></a>
+      <a href="index.html"><button>MAIN PAGE</button></a>
+      <a href="index2.html"><button>CARS</button></a>
+      <a href="index3.html"><button>DRAWING</button></a>
+      <a href="index4.html"><button>COLOR BLOCKS</button></a>
+      <a href="index5.html"><button>LINE GAME</button></a>
+      <a href="index6.html"><button>COW GAME</button></a>
     </h3>
     <p>
       (press left and right arrows)
