--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>JavaScript</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
   </head>
