--- a/index5.html
+++ b/index5.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>JavaScript</title>
-    <link rel="stylesheet" href="/style.css" />
-    <script src="/script2.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="/script2.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
   </head>
 
@@ -13,12 +13,12 @@
       <a href="index3.html">Next</a>
     </h1>
      <h3>
-      <a href="index.html"><button>CARS</button></a>
-      <a href="index2.html"><button>DRAWING</button></a>
-      <a href="index3.html"><button>COLOR BLOCKS</button></a>
-      <a href="index4.html"><button>LINE GAME</button></a>
-      <a href="index5.html"><button>COW GAME</button></a>
-      <a href="index6.html"><button>IDK BUT I DIDNT FINISH</button></a>
+      <a href="index.html"><button>MAIN PAGE</button></a>
+      <a href="index2.html"><button>CARS</button></a>
+      <a href="index3.html"><button>DRAWING</button></a>
+      <a href="index4.html"><button>COLOR BLOCKS</button></a>
+      <a href="index5.html"><button>LINE GAME</button></a>
+      <a href="index6.html"><button>COW GAME</button></a>
     </h3>
     <p>
       (click and drag mouse to  draw)
