--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Gaming Randomness
   </h1>
    <h3>
-      a href="index.html"><button>MAIN PAGE</button></a>
+      <a href="index.html"><button>MAIN PAGE</button></a>
       <a href="index2.html"><button>CARS</button></a>
       <a href="index3.html"><button>DRAWING</button></a>
       <a href="index4.html"><button>COLOR BLOCKS</button></a>
