--- a/index4.html
+++ b/index4.html
@@ -3,7 +3,7 @@
   <head>
     <title>JavaScript</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="/script2.js"></script>
+    <script src="script3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
   </head>
 
